--- a/src/main/resources/static/css/reset.css
+++ b/src/main/resources/static/css/reset.css
@@ -47,3 +47,13 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+
+html {
+  overflow-x: hidden;
+}
+body {
+    color: #333;
+  font-family: "Pretendard", -apple-system, BlinkMacSystemFont, system-ui,
+    Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", sans-serif;
+}
