--- a/src/main/resources/templates/member/joinStep4.mustache
+++ b/src/main/resources/templates/member/joinStep4.mustache
@@ -39,9 +39,15 @@
             이제 <strong>CINEMOA</strong>의 다양한 서비스를 이용해보세요.
         </div>
 
-        <div style="margin-top: 24px; display: flex; flex-direction: column; gap: 12px;">
-            <a href="/"><button>메인으로</button></a>
-            <a href="/member/mypage#preferred-info"><button>선호관람정보 설정</button></a>
+        <div class="step4-bottom-box">
+            <a href="/">
+                <img src="/images/icons/home-icon.svg" />
+                <p>메인으로</p>
+            </a>
+            <a href="/member/mypage#preferred-info">
+                <img src="/images/icons/favorite-movie-icon.svg"/>
+                <p>선호관람정보 설정</p>
+            </a>
         </div>
     </div>
 </div>
