--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -2,7 +2,7 @@
 header {
   width: 100%;
   border-bottom: 3px solid transparent;
-  border-image: linear-gradient(to right, #4320ab, #7571d9) 1;
+  border-image: linear-gradient(to right, #006f7c, #95c0c3) 1;
   background: #fff;
 }
 
@@ -18,7 +18,7 @@ header {
 
 .logo svg {
   height: 50px;
-  color: #4320ab;
+  color: #006f7c;
 }
 
 /* 로그인, 마이페이지 등 */
@@ -62,7 +62,7 @@ header {
 }
 
 .main-nav > ul > li > a:hover {
-  color: #4320ab;
+  color: #006f7c;
 }
 
 /* 서브메뉴 */
@@ -79,7 +79,7 @@ header {
   z-index: 999;
   overflow-x: hidden;
   border-top: 3px solid transparent;
-  border-image: linear-gradient(to right, #4320ab, #7571d9) 1;
+  border-image: linear-gradient(to right, #006f7c, #95c0c3) 1;
 }
 
 .submenu-inner {
@@ -100,7 +100,7 @@ header {
 }
 
 .submenu-inner li a:hover {
-  color: #4320ab;
+  color: #006f7c;
 }
 
 /* 메뉴에 마우스 올릴 때 서브메뉴 표시 */
@@ -114,7 +114,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  background: linear-gradient(to right, #4320ab, #7571d9);
+  background: linear-gradient(to right, #006f7c, #95c0c3);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 }
