--- a/src/main/resources/templates/member/joinStep3.mustache
+++ b/src/main/resources/templates/member/joinStep3.mustache
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cinemoa</title>
+    <title>cinemoa - 회원가입</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretendard@latest/dist/web/static/pretendard.css"/>
     <link rel="stylesheet" href="/css/reset.css"/>
     <link rel="stylesheet" href="/css/member/join.css"/>
@@ -18,6 +18,7 @@
             </svg>
         </a>
     </div>
+
     <!-- 진행 단계 표시 -->
     <ul class="step-indicator">
         <li>STEP1. 메일인증</li>
@@ -29,29 +30,27 @@
     <!-- 회원정보 입력 폼 -->
     <form method="post" action="/member/join/step3/process">
         <div class="input-group">
-            <label for="member_id">아이디 *</label>
-            <input type="text" id="member_id" name="member_id" required>
+            <label for="member_id">아이디 (로그인 ID)</label>
+            <input type="text" id="member_id" name="member_id" required placeholder="아이디 입력">
         </div>
 
         <div class="input-group">
-            <label for="password">비밀번호 *</label>
-            <input type="password" id="password" name="password" required>
+            <label for="password">비밀번호</label>
+            <input type="password" id="password" name="password" required placeholder="비밀번호 입력">
         </div>
 
         <div class="input-group">
-            <label for="name">이름 *</label>
-            <input type="text" id="name" name="name" required>
+            <label for="name">이름</label>
+            <input type="text" id="name" name="name" required placeholder="이름 입력">
         </div>
 
         <div class="input-group">
-            <label for="nickname">닉네임 *</label>
-            <input type="text" id="nickname" name="nickname" required>
+            <label for="nickname">닉네임</label>
+            <input type="text" id="nickname" name="nickname" required placeholder="닉네임 입력">
         </div>
 
-        <div class="input-group">
-            <label for="birth_date">생년월일</label>
-            <input type="date" id="birth_date" name="birth_date">
-        </div>
-
-        <div class="input-group">
-            <label for="phone">휴대전화</label
+        <button type="submit">가입 완료</button>
+    </form>
+</div>
+</body>
+</html>
