--- a/src/main/resources/templates/member/joinStep3.mustache
+++ b/src/main/resources/templates/member/joinStep3.mustache
@@ -31,7 +31,7 @@
     <form method="post" action="/member/join/step3/process">
         <div class="input-group">
             <label for="member_id">아이디 (로그인 ID)</label>
-            <input type="text" id="member_id" name="member_id" required placeholder="아이디 입력">
+            <input type="text" id="memberId" name="memberId" required placeholder="아이디 입력">
         </div>
 
         <div class="input-group">
