--- a/src/main/resources/templates/member/joinStep4.mustache
+++ b/src/main/resources/templates/member/joinStep4.mustache
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ko">
 <head>
+    <link rel="icon" href="/images/icons/favicon.png" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cinemoa - 회원가입 완료</title>
