mypage 기본틀 완성

--- a/src/main/resources/templates/mypage/mypageLayout.mustache
+++ b/src/main/resources/templates/mypage/mypageLayout.mustache
@@ -30,6 +30,21 @@
             {{#bookinglist}}
                 {{> mypage/bookinglist }}
             {{/bookinglist}}
+            {{#mymovie}}
+                {{> mypage/mymovie }}
+            {{/mymovie}}
+            {{#myinfo}}
+                {{> mypage/myinfo }}
+            {{/myinfo}}
+            {{#pref}}
+                {{> mypage/pref }}
+            {{/pref}}
+            {{#withdrawal}}
+                {{> mypage/withdrawal }}
+            {{/withdrawal}}
+            {{#myinquiry}}
+                {{> mypage/myinquiry }}
+            {{/myinquiry}}
         </div>
     </div>
 </div>
