footer 스타일 수정

--- a/src/main/resources/static/css/reset.css
+++ b/src/main/resources/static/css/reset.css
@@ -59,3 +59,8 @@ body {
   font-family: "Pretendard", -apple-system, BlinkMacSystemFont, system-ui,
     Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", sans-serif;
 }
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 1000px white inset;
+    box-shadow: 0 0 0 1000px white inset;
+    -webkit-text-fill-color: #000;
+}
