--- a/src/main/resources/templates/member/login.mustache
+++ b/src/main/resources/templates/member/login.mustache
@@ -20,7 +20,7 @@
 
     <div class="login-links">
         <a href="/member/join/step1">회원가입</a> |
-        <a href="#">아이디/비밀번호 찾기</a> |<!-- 이건 추후 구현 -->
+        <a href="/member/find">아이디/비밀번호 찾기</a> |<!-- 이건 추후 구현 -->
         <a href="#">비회원 예매 조회</a>
     </div>
 </div>
