--- a/src/main/resources/templates/member/find.mustache
+++ b/src/main/resources/templates/member/find.mustache
@@ -37,7 +37,7 @@
         <div id="find-id" class="tab-panel active">
             <div class="find-table">
                 <input type="text" name="name" placeholder="이름을 입력해주세요."/>
-                <input type="email" name="email" placeholder="example@example.com"/>
+                <input type="email" name="email" placeholder="이메일"/>
             </div>
             <button class="btn-find">아이디 찾기</button>
         </div>
@@ -48,7 +48,7 @@
                 <input type="text" name="memberId" id="pw-memberId" placeholder="아이디"/>
                 <input type="text" name="name" id="pw-name" placeholder="이름"/>
                 <div class="input-group">
-                    <input type="email" name="email" id="pw-email" placeholder="example@example.com"/>
+                    <input type="email" name="email" id="pw-email" placeholder="이메일"/>
                     <button type="button" class="auth-btn" id="pw-send-code" disabled>인증번호 전송</button>
                 </div>
 
