--- a/src/main/resources/static/css/mypage/mypage.css
+++ b/src/main/resources/static/css/mypage/mypage.css
@@ -15,6 +15,7 @@
     display: flex;
     gap: 20px;
     background-color: blanchedalmond;
+    align-items: flex-start;
 }
 /* ==== [ 메뉴영역 ] ==== */
 .mypage-menu{
