--- a/src/main/resources/static/css/movie.css
+++ b/src/main/resources/static/css/movie.css
@@ -1,7 +1,6 @@
 *{outline:none; border: none;}
 *, :after, :before {box-sizing:border-box;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;}
 
-
 .container {
     width: 100%;
     max-width: 1200px;
@@ -24,6 +23,8 @@ nav ul {
     display: flex;
     gap: 1rem;
 }
+
+/* list */
 .movie-chart .tit {
     display: flex;
     justify-content: space-between;
@@ -32,44 +33,48 @@ nav ul {
     padding: 1rem 0;
     font-weight: 600;
     color: #666;
+    margin-bottom: 1rem;
 }
+
 .movie-chart .tit h1 {
   font-size: 36px;
   letter-spacing: 1px;
   color: #222;
 }
+
 .movie-chart .tit .status-tab {
     display: flex;
     gap: 1rem;
     align-items: center;
 }
-
 .movie-chart .tit .status-tab a.active {
     color: #4320ab;
         display: flex;
-        align-items: center;
 }
+
 .movie-chart .tit .status-tab a.active:before {
     content: '▶';
     font-size: 12px;
     padding-right: 5px;
 }
+
 .movie-chart .sort {
     justify-content: space-between;
-    padding: 1rem 0;
+    padding-top:1rem;
 }
-
 
 .movie-chart .movie-list {
     display: flex;
     flex-wrap: wrap;
     gap: calc(13rem / 3);
     width: 100%;
+    padding: 1rem 0;
 }
 
 .movie-chart .movie-list .item {
     width: calc((100% - 13rem) / 4);
 }
+
 .movie-chart .movie-list .item .main-image {
     min-width: 248px;
     width: 100%;
@@ -77,7 +82,13 @@ nav ul {
     border-radius: 20px;
     overflow: hidden;
 }
-.movie-chart .movie-list .item .main-image img {width: 100%; }
+
+.movie-chart .movie-list .item .main-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .movie-chart .movie-list .item .item-tit {
     display: flex;
     gap: 10px;
@@ -89,6 +100,90 @@ nav ul {
     font-size: 22px;
     font-weight: 500;
 }
+
+.movie-chart .movie-list .item .item-info {
+    display: flex;
+    align-items: center;
+    color: #666;
+}
+
+.movie-chart .movie-list .item .rate:after {
+    content: '';
+    display: inline-block;
+    width: 1px;
+    height: 12px;
+    margin: 0 5px;
+    background-color: #ccc;
+}
+
+.movie-chart .movie-list .item .item-btn {
+   padding: .5rem 0;
+   gap: 5px;
+   display: flex;
+   height: 55px;
+   align-items: center;
+}
+
+.movie-chart .movie-list .item .item-btn .like-btn {
+    width: 72px;
+    padding: 8px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    display: flex    ;
+    gap: 5px;
+    border-radius: 5px;
+    justify-content: center;
+    height: 100%;
+    align-items: center;
+    flex: 1;
+}
+
+.movie-chart .movie-list .item .item-btn .reservation-btn {
+    padding: 8px;
+    border: 1px solid #4320ab;
+    display: flex    ;
+    border-radius: 5px;
+    height: 100%;
+    background-color: #4320ab;
+    flex: 2;
+    color: #fff;
+    font-weight: 500;
+    font-size: 14px;
+    justify-content: center;
+    cursor:pointer;
+}
+
+/* view */
+.movie-detail {padding: 3rem 0;}
+.movie-detail .movie-info-wrap {display: flex;}
+.movie-detail .movie-info-wrap .poster {
+    width: 316px;
+    height: 468px;
+    overflow: hidden;
+    border-radius: 20px;
+}
+.movie-detail .movie-info-wrap .poster img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.movie-detail .movie-info {
+    padding: 3rem;
+    width: calc(100% - 316px);
+}
+
+.movie-detail .movie-info .tit {
+    font-size: 36px;
+    font-weight: 700;
+    padding-bottom: 1rem;
+}
+
+.movie-detail .movie-info  .info1 {
+    display: flex;
+    font-size: 22px;
+    font-weight: 600;
+}
+
 .movie-grade {
     display:inline-block;
     width: 23px;
@@ -96,15 +191,19 @@ nav ul {
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
+
 .movie-grade.age-all {
     background-image: url(https://img.megabox.co.kr/static/pc/images/common/txt/ALL_46x46.png);
 }
+
 .movie-grade.age-12 {
     background-image: url(https://img.megabox.co.kr/static/pc/images/common/txt/12_46x46.png);
 }
+
 .movie-grade.age-15 {
     background-image: url(https://img.megabox.co.kr/static/pc/images/common/txt/15_46x46.png);
 }
+
 .movie-grade.age-19 {
     background-image: url(https://img.megabox.co.kr/static/pc/images/common/txt/19_46x46.png);
 }
@@ -178,3 +277,33 @@ nav ul {
   align-items: center;
   gap: 10px;
 }
+
+.heart-button {
+    background-color: #fff;
+	transition: all 0.12s;
+	padding: 0;
+	cursor: pointer;
+}
+
+.heart-button svg path {
+	fill: transparent;
+	stroke: hsl(0,0%,30%);
+	stroke-width: 7%;
+	transition: all 0.12s;
+}
+
+.heart-button.active svg {
+	animation: liked .4s 1;
+}
+
+.heart-button.active svg path {
+	fill: hsl(0,100%,60%);
+	stroke: hsl(0,100%,60%);
+}
+
+/* @keyframes liked {
+	0% { scale: 1; rotate: -15deg; }
+	80% { scale: 1.2; rotate: 8deg; }
+	100% { scale: 1.1; rotate: 0deg; }
+} */
+
