--- a/src/main/resources/templates/mypage/mypageLayout.mustache
+++ b/src/main/resources/templates/mypage/mypageLayout.mustache
@@ -10,7 +10,14 @@
             <nav>
                 <ul class="mypage-menu-ul">
                     <li><a href="/mypage/bookinglist">예매/구매내역</a></li>
-                    <li><a href="/mypage/mymovie">내가 본 영화</a></li>
+                    <li>
+                        <a href="/mypage/mymovie">나의 영화</a>
+                        <ul class="mypage-menu-ul-sub">
+                            <li><a href="/mypage/mymovie/mymovie">내가 본 영화</a></li>
+                            <li><a href="/mypage/mymovie/myreview">내가 쓴 관람평</a></li>
+                            <li><a href="/mypage/mymovie/mylike">좋아요 한 영화</a></li>
+                        </ul>
+                    </li>
                     <li>
                         <a href="/mypage/information/myinfo">회원정보</a>
                         <ul class="mypage-menu-ul-sub">
