--- a/src/main/resources/templates/seats/seatReservation.mustache
+++ b/src/main/resources/templates/seats/seatReservation.mustache
@@ -65,10 +65,10 @@
                     <span class="seat">10</span>
                     <span class="seat">11</span>
                     <span class="seat-gap"></span><!-- 간격용 -->
-                    <span class="seat">12</span>
-                    <span class="seat">13</span>
-                    <span class="seat">14</span>
-                    <span class="seat">15</span>
+                    <span class="seat vip">12</span>
+                    <span class="seat vip">13</span>
+                    <span class="seat vip">14</span>
+                    <span class="seat vip">15</span>
                 </div>
                 <!-- 좌석 행들 -->
                 <div class="row" data-row="B">
@@ -278,5 +278,5 @@
         </div>
     </div>
 </div>
-
+<script src="/js/seats/seatReservation.js"></script>
 {{> common/footer }}
