--- a/src/main/resources/static/css/seats/seatReservation.css
+++ b/src/main/resources/static/css/seats/seatReservation.css
@@ -3,10 +3,6 @@
   gap: 40px;
 }
 
-.seat-selection {
-
-}
-
 .seat-selection .title {
   display: flex;
   justify-content: space-between;
@@ -21,7 +17,7 @@
   line-height: 1;
 }
 
-.seat-selection .title .reset-btn {
+.reset-btn {
   background: #fff;
   padding: 6px 12px;
   border: 1px solid #ddd;
@@ -31,7 +27,31 @@
   gap: 5px;
   align-items: center;
   height: 36px;
+  cursor: pointer;
 }
+
+.seat.disabled {
+  background-color: #f5f5f5;
+  color: #999;
+  font-size: 16px;
+  font-weight: bold;
+  pointer-events: none;
+}
+
+.seat.vip {
+  background-color: #ffd700;
+  position: relative;
+}
+
+.seat.vip::after {
+  content: "♿";
+  font-size: 8px;
+  position: absolute;
+  right: 2px;
+  bottom: 3px;
+  color: #333;
+}
+
 
 
 .person-selection {
@@ -146,10 +166,6 @@
   cursor: not-allowed;
 }
 
-.seat.vip {
-  background-color: #ffd700;
-}
-
 .seat-gap {
   display: inline-block;
   width: 30px;
@@ -249,6 +265,15 @@
 
 .box.vip {
   background-color: #ffd700;
+  position: relative;
+}
+.box.vip::after {
+  content: "♿";
+  font-size: 8px;
+  position: absolute;
+  right: 2px;
+  bottom: 3px;
+  color: #333;
 }
 
 .selected-seats ul {
