mypage - 선호관람정보 로직완성

--- a/src/main/resources/templates/mypage/mypageHome.mustache
+++ b/src/main/resources/templates/mypage/mypageHome.mustache
@@ -35,7 +35,7 @@
     <div class="col-right">
         <div class="col-title"><h2>선호관람정보</h2><a href="/mypage/information/pref" class="btn-pref-setting">설정</a></div><!--설정클릭시 선호관람정보 설정 페이지로 or 선호관람정보 수정 모달창 나타남-->
         <div class="col-contents">
-            <p>선호 극장 : {{#preferredCinema}}{{preferredCinema}}{{/preferredCinema}}{{^preferredCinema}} 설정안됨{{/preferredCinema}}</p>
+            <p>선호 극장 : {{#preferredCinemaName}}{{preferredCinemaName}}{{/preferredCinemaName}}{{^preferredCinemaName}} 설정안됨{{/preferredCinemaName}}</p>
             <p>선호 장르 : {{#preferredGenres}}{{preferredGenres}}{{/preferredGenres}}{{^preferredGenres}} 설정안됨{{/preferredGenres}}</p>
         </div>
     </div>
