--- a/src/main/resources/static/css/mypage/pref.css
+++ b/src/main/resources/static/css/mypage/pref.css
@@ -1,11 +1,14 @@
-.pref-container {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 24px;
-  background-color: #fff;
-  border: 1px solid #e0e0e0;
-  border-radius: 10px;
-  font-family: 'Pretendard', sans-serif;
+.container-title{
+  color: #006f7c;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+form{
+  margin-top: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 /* 공통 form 그룹 */
@@ -25,12 +28,27 @@
 /* 셀렉트 박스 */
 #preferredCinema {
   width: 100%;
+  max-width: 350px;
   padding: 10px 12px;
   font-size: 14px;
   border: 1px solid #ccc;
   border-radius: 6px;
   background-color: #fff;
+  -moz-appearance: none; /* 기본 화살표 제거 */
+  -webkit-appearance: none; /* 기본 화살표 제거 */
+  appearance: none; /* 기본 화살표 제거 */
+  background-image: url('/images/icons/arrow-down.svg'); /* 변경 원하는 화살표 아이콘 */
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 16px 16px;
+  cursor: pointer;
 }
+#preferredCinema:focus{
+  outline: none;
+  border: 1px solid #006f7c;
+}
+
+
 
 /* 장르 선택 영역 */
 .genre-checkboxes {
@@ -65,17 +83,29 @@
   display: none;
 }
 
-/* 저장 버튼 */
-.btn.btn-primary {
+/* 버튼 */
+.btn-group{
+  display: flex;
+  gap: 10px;
+}
+.btn {
   padding: 10px 18px;
   font-size: 15px;
-  background-color: #693cee;
+  background-color: #006f7c;
   color: #fff;
   border: none;
   border-radius: 6px;
   cursor: pointer;
 }
-
-.btn.btn-primary:hover {
-  background-color: #552ac5;
+.btn.btn-secondary{
+  display: flex;
+  gap: 5px;
+  background-color: #f4f4f4;
+  color: #333;
+  align-items: center;
+  border: 1px solid #ddd;
+}
+.btn.btn-secondary img{
+  width: 15px;
+  height: 15px;
 }
